--- a/SubsidioJoven/pom.xml
+++ b/SubsidioJoven/pom.xml
@@ -11,4 +11,14 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.uelbosque.subsidiojoven.SubsidioJoven</exec.mainClass>
     </properties>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.jFuzzyLogic/jFuzzyLogic -->
+        <dependency>
+            <groupId>net.sourceforge.jFuzzyLogic</groupId>
+            <artifactId>jFuzzyLogic</artifactId>
+            <version>1.2.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}\lib\jFuzzyLogic.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
